Fix button wrapping issue on small screens

--- a/app/less/outfit.less
+++ b/app/less/outfit.less
@@ -72,7 +72,7 @@
     }
 
     .largePhone({
-      width: 70%;
+      width: 60%;
     });
 
     .medPhone({
